modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/operation/required-probes/rendered/test_samples/pods/001-example-allowed.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

apiVersion: v1
kind: Pod
metadata:
    name: allowed
    namespace: default
spec:
    containers:
        - image: my.repo/app:latest
          livenessProbe:
            initialDelaySeconds: 15
            periodSeconds: 20
            tcpSocket:
                port: 8080
          name: foo
          readinessProbe:
            initialDelaySeconds: 5
            periodSeconds: 10
            tcpSocket:
                port: 8080
