modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/operation/required-probes/rendered/test_samples/pods/002-example-disallowed.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

apiVersion: v1
kind: Pod
metadata:
    name: disallowed
    namespace: default
spec:
    containers:
        - image: gcr.io/app:latest
          livenessProbe:
            initialDelaySeconds: 15
            periodSeconds: 20
            tcpSocket:
                port: 8080
          name: foo
