modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/operation/required-probes/rendered/test_samples/pods/003-example-disallowed-2.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

apiVersion: v1
kind: Pod
metadata:
    name: disallowed
    namespace: default
spec:
    containers:
        - image: gcr.io/app:latest
          name: foo
          readinessProbe:
            initialDelaySeconds: 5
            periodSeconds: 10
            tcpSocket:
                port: 8080
